[package]
name = "rs_jpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbojpeg = { version = "0.5", features = ["image"] }
itertools = "0.12.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
rand = "0.8.5"

[profile.release]
debug = true